; ModuleID = '/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_tjInitTransform.c'
source_filename = "/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_tjInitTransform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@errStr = common dso_local global i32 0, align 4
@JMSG_LENGTH_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"tjInitTransform(): Memory allocation failure\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"No error\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @tjInitTransform() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %2, align 8
  store i32* null, i32** %3, align 8
  %4 = call i64 @malloc(i32 4)
  %5 = inttoptr i64 %4 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %5, %struct.TYPE_5__** %2, align 8
  %6 = icmp eq %struct.TYPE_5__* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %0
  %8 = load i32, i32* @errStr, align 4
  %9 = load i32, i32* @JMSG_LENGTH_MAX, align 4
  %10 = call i32 @snprintf(i32 %8, i32 %9, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %1, align 8
  br label %28

11:                                               ; preds = %0
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %13 = call i32 @MEMZERO(%struct.TYPE_5__* %12, i32 4)
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @JMSG_LENGTH_MAX, align 4
  %18 = call i32 @snprintf(i32 %16, i32 %17, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %20 = call i32* @_tjInitCompress(%struct.TYPE_5__* %19)
  store i32* %20, i32** %3, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %24, label %23

23:                                               ; preds = %11
  store i32* null, i32** %1, align 8
  br label %28

24:                                               ; preds = %11
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %26 = call i32* @_tjInitDecompress(%struct.TYPE_5__* %25)
  store i32* %26, i32** %3, align 8
  %27 = load i32*, i32** %3, align 8
  store i32* %27, i32** %1, align 8
  br label %28

28:                                               ; preds = %24, %23, %7
  %29 = load i32*, i32** %1, align 8
  ret i32* %29
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @snprintf(i32, i32, i8*) #1

declare dso_local i32 @MEMZERO(%struct.TYPE_5__*, i32) #1

declare dso_local i32* @_tjInitCompress(%struct.TYPE_5__*) #1

declare dso_local i32* @_tjInitDecompress(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
